--- a/Notebooks/02_test.ipynb
+++ b/Notebooks/02_test.ipynb
@@ -1228,6 +1228,121 @@
    "source": [
     "data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rdflib import Graph, Literal, URIRef\n",
+    "from psycopg import sql\n",
+    "import networkx as nx\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pyvis.network import Network\n",
+    "from collections import defaultdict\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "import yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_path = Path('.').absolute().parent\n",
+    "data_path = main_path / 'data'\n",
+    "sys.path.append(str(main_path / 'src'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ontology import OntologySystem\n",
+    "\n",
+    "setting_path = main_path / 'setting_files'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with (setting_path / 'app_settings.yml').open('r') as file:\n",
+    "    settings = yaml.load(file, Loader=yaml.FullLoader)\n",
+    "\n",
+    "ontology_module = OntologySystem(\n",
+    "    acc_name_path=data_path / 'AccountName.csv', \n",
+    "    rdf_path=data_path / 'AccountRDF.xml',\n",
+    "    model_path=data_path / settings['ontology']['model']['model_name'],\n",
+    "    kwargs_graph_drawer=settings['ontology']['graph_drawer']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = ontology_module.sparql.get_predefined_knowledge('BS')\n",
+    "sparql_results = ontology_module.sparql.query(q)\n",
+    "net = ontology_module.get_graph(sparql_results, show=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"temp.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1fe88507460>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net.show_buttons(filter_=['physics'])\n",
+    "net.show('temp.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
