--- a/Notebooks/04_NER_testing.ipynb
+++ b/Notebooks/04_NER_testing.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: True, used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -13,7 +23,7 @@
     "data_path = main_path / 'data'\n",
     "setting_path = main_path / 'setting_files'\n",
     "\n",
-    "sys.path.append(str(main_path))\n",
+    "sys.path.append(str(main_path / 'src'))\n",
     "\n",
     "import torch\n",
     "import yaml\n",
@@ -21,8 +31,8 @@
     "import pytorch_lightning as pl\n",
     "from pytorch_lightning import seed_everything\n",
     "\n",
-    "from src.nlu_models import NLUModel\n",
-    "from src.nlu_utils import NLUDataModule\n",
+    "from nlu_models import NLUModel\n",
+    "from nlu_utils import NLUDataModule\n",
     "\n",
     "with (setting_path / 'train_settings.yml').open('r') as file:\n",
     "    settings = yaml.load(file, Loader=yaml.FullLoader)\n",
@@ -48,28 +58,19 @@
     "else:\n",
     "    weight_dict = None\n",
     "\n",
-    "hparams = {\n",
-    "    'stage': model_settings['stage'],\n",
-    "    'model_path': model_settings['model_path'], \n",
-    "    'intent_size': len(data_module.intents2id), \n",
-    "    'tags_size': len(data_module.tags2id), \n",
-    "    'lr': model_settings['lr'],\n",
-    "    'weight_decay_rate': model_settings['weight_decay_rate'],\n",
-    "    'loss_type': model_settings['loss_type'],\n",
-    "    'multigpu': True if trainer_settings['n_gpus'] > 1 else False,\n",
-    "    'weight_dict': weight_dict\n",
-    "}\n",
-    "for k, v in model_settings['schedular'].items():\n",
-    "    hparams[f'schedular_{k}'] = v\n",
-    "if model_settings['loss_type'] == 'focal':\n",
-    "    for k, v in model_settings['focal'].items():\n",
-    "        hparams[f'focal_{k}'] = v\n",
+    "if trainer_settings['deterministic']:\n",
+    "    seed_everything(seed=settings['seed'], workers=True)\n",
+    "deterministic = trainer_settings['deterministic']\n",
     "\n",
-    "model_dict = {\n",
-    "    0: '_l7_tk3_ce.ckpt',\n",
-    "    1: '_l7_tk3_focal.ckpt',\n",
-    "    2: '_l8_tk3_focal.ckpt'\n",
-    "}\n",
+    "trainer = pl.Trainer(\n",
+    "    gpus=trainer_settings['n_gpus'], \n",
+    "    max_epochs=trainer_settings['n_epochs'], \n",
+    "    num_sanity_val_steps=trainer_settings['num_sanity_val_steps'],\n",
+    "    log_every_n_steps=trainer_settings['log_every_n_steps'],\n",
+    "    deterministic=deterministic,\n",
+    ")\n",
+    "\n",
+    "# trainer.test(ckpt_path='best', datamodule=data_module)\n",
     "\n",
     "# checkpoint_path = str(main_path / 'checkpoints' / 'nlu_simple' / 'best_model.ckpt')\n",
     "\n",
@@ -89,59 +90,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ce_l7_tk3_0'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'x_ce_l7_tk3_0.yml'.rstrip('.yml').split('_', 1)[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.nlu_utils import NLUTokenizer\n",
+    "from nlu_utils import NLUTokenizer\n",
     "\n",
     "tokenizer = NLUTokenizer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('focal2_l7_tk3_3', 'epoch=18-step=265-val_loss=0.30.ckpt')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForTokenClassification: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.bias']\n",
+      "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForTokenClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'tags': tensor([[  7.2178, -11.1062, -18.4225,   5.0288,   6.1428,   4.4894,   5.1955,\n",
+       "          -11.9663,  -9.8212, -11.4087,  -6.8118],\n",
+       "         [  7.2178, -11.1062, -18.4225,   5.0288,   6.1428,   4.4894,   5.1955,\n",
+       "          -11.9663,  -9.8212, -11.4087,  -6.8118],\n",
+       "         [  7.2178, -11.1062, -18.4225,   5.0288,   6.1428,   4.4894,   5.1955,\n",
+       "          -11.9663,  -9.8212, -11.4087,  -6.8118],\n",
+       "         [  7.2178, -11.1062, -18.4225,   5.0288,   6.1428,   4.4894,   5.1955,\n",
+       "          -11.9663,  -9.8212, -11.4087,  -6.8118]], grad_fn=<ViewBackward0>),\n",
+       " 'intent': tensor([[  4.2094,   2.9006, -24.7791,  -2.1780]], grad_fn=<AddmmBackward0>)}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def predict(model, tokenizer, text):\n",
-    "    bert_encodes = tokenizer(\n",
-    "        text, \n",
-    "        add_special_tokens=True, \n",
-    "        truncation=True, \n",
-    "        max_length=256,\n",
-    "        return_tensors='pt'\n",
-    "    )\n",
-    "    output = model.predict(**bert_encodes)\n",
-    "    return output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model_idx = 8\n",
+    "model_dict = dict(enumerate([\n",
+    "    ('ce_l7_tk3_0', 'epoch=11-step=167-val_loss=1.74.ckpt'),     # 0\n",
+    "    ('ce_l7_tk3_1', 'epoch=8-step=125-val_loss=1.57.ckpt'),      # 1\n",
+    "    ('ce_l7_tk3_3', 'epoch=6-step=97-val_loss=1.82.ckpt'),       # 2\n",
+    "    ('focal_l7_tk3_0', 'epoch=17-step=251-val_loss=0.43.ckpt'),  # 3\n",
+    "    ('focal_l7_tk3_1', 'epoch=19-step=279-val_loss=0.35.ckpt'),  # 4\n",
+    "    ('focal_l7_tk3_3', 'epoch=18-step=265-val_loss=0.44.ckpt'),  # 5\n",
+    "    ('focal2_l7_tk3_0', 'epoch=18-step=265-val_loss=0.25.ckpt'), # 6\n",
+    "    ('focal2_l7_tk3_1', 'epoch=19-step=279-val_loss=0.17.ckpt'), # 7\n",
+    "    ('focal2_l7_tk3_3', 'epoch=18-step=265-val_loss=0.30.ckpt'), # 8\n",
+    "]))\n",
+    "s = model_dict[model_idx]\n",
+    "print(s)\n",
+    "checkpoint_path = str(main_path / 'logs' / 'nlu_simple' / s[0] / 'checkpoints' / s[1])\n",
+    "model = NLUModel.load_from_checkpoint(checkpoint_path)\n",
     "data = {\"text\": \"current assets\"}\n",
     "text = data['text']\n",
     "bert_encodes = tokenizer(\n",
@@ -151,38 +167,16 @@
     "    max_length=256,\n",
     "    return_tensors='pt'\n",
     ")\n",
-    "# o = predict(model, tokenizer, text)\n",
-    "# o"
+    "o = model(**bert_encodes)\n",
+    "o"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "o = model(**bert_encodes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "o['intent'].argmax()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
