update crf mask out

--- a/Notebooks/03_NER_training.ipynb
+++ b/Notebooks/03_NER_training.ipynb
@@ -1618,9 +1618,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 110179.21it/s]\n",
-      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 240606.78it/s]\n",
-      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 90419.15it/s]\n"
+      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 103640.42it/s]\n",
+      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 225232.34it/s]\n",
+      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 82059.76it/s]\n"
      ]
     }
    ],
@@ -1707,7 +1707,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -1751,25 +1751,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.to('cuda')"
+    "o = model(**{k: v.to('cpu') for k, v in x.items()})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "device(type='cuda', index=0)"
+       "{'tags_loss': tensor(33.6249, grad_fn=<MulBackward0>),\n",
+       " 'intent_loss': tensor(0.4277, grad_fn=<MeanBackward0>),\n",
+       " 'tags_pred': tensor([9, 9, 9,  ..., 2, 8, 8]),\n",
+       " 'intent_pred': tensor([0, 2, 2, 0, 1, 0, 2, 1, 2, 2, 2, 2, 1, 2, 0, 2, 0, 0, 2, 2, 1, 2, 2, 2,\n",
+       "         0, 1, 0, 1, 2, 0, 1, 0, 2, 1, 2, 2, 2, 2, 1, 2, 0, 2, 2, 1, 0, 0, 0, 2,\n",
+       "         0, 2, 0, 1, 2, 1, 0, 0, 0, 2, 1, 2, 1, 2, 1, 2])}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
