udpate new schedular with new optimizer

--- a/Notebooks/03_NER_training.ipynb
+++ b/Notebooks/03_NER_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1611,16 +1611,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 103640.42it/s]\n",
-      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 225232.34it/s]\n",
-      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 82059.76it/s]\n"
+      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 92696.36it/s]\n",
+      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 215098.75it/s]\n",
+      "loading: 100%|██████████| 14158/14158 [00:00<00:00, 76657.59it/s]\n"
      ]
     }
    ],
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,56 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([10])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.rand(10, 1).view(-1).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([20, 1])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cat([torch.rand(10, 1), torch.rand(10, 1)]).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1742,14 +1693,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -1781,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1802,27 +1753,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\simon\\miniconda3\\envs\\venv\\lib\\site-packages\\pytorch_lightning\\core\\lightning.py:415: UserWarning: You are trying to `self.log()` but the `self.trainer` reference is not registered on the model yet. This is most likely because the model hasn't been passed to the `Trainer`\n",
+      "  rank_zero_warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "o = model.forward_all(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds, targets = model._preprocess_for_metrics([o])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'tags_loss': tensor(33.6249, grad_fn=<MulBackward0>),\n",
-       " 'intent_loss': tensor(0.4277, grad_fn=<MeanBackward0>),\n",
-       " 'tags_pred': tensor([9, 9, 9,  ..., 2, 8, 8]),\n",
-       " 'intent_pred': tensor([0, 2, 2, 0, 1, 0, 2, 1, 2, 2, 2, 2, 1, 2, 0, 2, 0, 0, 2, 2, 1, 2, 2, 2,\n",
-       "         0, 1, 0, 1, 2, 0, 1, 0, 2, 1, 2, 2, 2, 2, 1, 2, 0, 2, 2, 1, 0, 0, 0, 2,\n",
-       "         0, 2, 0, 1, 2, 1, 0, 0, 0, 2, 1, 2, 1, 2, 1, 2])}"
+       "{'train_tags_Accuracy': tensor(0.0163), 'train_tags_F1': tensor(0.0163)}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "o"
+    "prefix = 'train_'\n",
+    "k = 'tags'\n",
+    "model.metrics[prefix][k](preds[k], targets[k])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 8, 9,  ..., 0, 0, 0])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "targets['tags']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_tags_Accuracy': tensor(0.5417), 'train_tags_F1': tensor(0.5417)}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.metrics['train_']['tags'].compute()"
    ]
   },
   {
