--- a/Notebooks/03_NER_training.ipynb
+++ b/Notebooks/03_NER_training.ipynb
@@ -1842,22 +1842,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "device(type='cpu')"
+       "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.device"
+    "5e-5 == 0.00005"
    ]
   },
   {
