--- a/Notebooks/03_NER_training.ipynb
+++ b/Notebooks/03_NER_training.ipynb
@@ -1866,22 +1866,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import get_scheduler, get_cosine_schedule_with_warmup, get_cosine_with_hard_restarts_schedule_with_warmup\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = get_scheduler('cosine', torch.optim.Adam(nn.Linear(1, 1).parameters()), 100, 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "inf"
+       "<torch.optim.lr_scheduler.LambdaLR at 0x26c8c283d30>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainer.num_training_batches"
+    "torch.optim.lr_scheduler.LambdaLR(torch.optim.Adam(nn.Linear(1, 1).parameters()), )"
    ]
   },
   {
