--- a/Notebooks/04_NER_testing.ipynb
+++ b/Notebooks/04_NER_testing.ipynb
@@ -44,6 +44,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_results = defaultdict()\n",
+    "checkpoint_paths = []\n",
+    "for p in (main_path / 'logs' / 'nlu_simple').glob('*'):\n",
+    "    if p.name == '.ipynb_checkpoints':\n",
+    "        continue\n",
+    "    checkpoint_paths.append(list((p / 'checkpoints').glob('*.ckpt'))[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[WindowsPath('C:/Users/simon/Desktop/Codes/FSQA/logs/nlu_simple/ce_l3_tk3_0/checkpoints/epoch=35-step=251-val_loss=26.6686.ckpt'),\n",
+       " WindowsPath('C:/Users/simon/Desktop/Codes/FSQA/logs/nlu_simple/ce_l3_tk3_1/checkpoints/epoch=35-step=251-val_loss=24.6261.ckpt'),\n",
+       " WindowsPath('C:/Users/simon/Desktop/Codes/FSQA/logs/nlu_simple/ce_l3_tk3_3/checkpoints/epoch=35-step=251-val_loss=28.7343.ckpt'),\n",
+       " WindowsPath('C:/Users/simon/Desktop/Codes/FSQA/logs/nlu_simple/ce_l5_tk3_0/checkpoints/epoch=23-step=551-val_loss=4.2472.ckpt'),\n",
+       " WindowsPath('C:/Users/simon/Desktop/Codes/FSQA/logs/nlu_simple/ce_l5_tk3_1/checkpoints/epoch=23-step=551-val_loss=4.0007.ckpt'),\n",
+       " WindowsPath('C:/Users/simon/Desktop/Codes/FSQA/logs/nlu_simple/ce_l5_tk3_3/checkpoints/epoch=23-step=551-val_loss=4.4651.ckpt'),\n",
+       " WindowsPath('C:/Users/simon/Desktop/Codes/FSQA/logs/nlu_simple/ce_l7_tk3_0/checkpoints/epoch=11-step=2843-val_loss=0.0171.ckpt'),\n",
+       " WindowsPath('C:/Users/simon/Desktop/Codes/FSQA/logs/nlu_simple/ce_l7_tk3_1/checkpoints/epoch=11-step=2843-val_loss=0.0067.ckpt'),\n",
+       " WindowsPath('C:/Users/simon/Desktop/Codes/FSQA/logs/nlu_simple/ce_l7_tk3_3/checkpoints/epoch=11-step=2843-val_loss=0.0101.ckpt'),\n",
+       " WindowsPath('C:/Users/simon/Desktop/Codes/FSQA/logs/nlu_simple/ce_noaug/checkpoints/epoch=35-step=179-val_loss=36.4705.ckpt')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for p in checkpoint_paths:\n",
+    "    model = NLUModel.load_from_checkpoint(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "checkpoint_path = str(main_path / 'logs' / 'nlu_simple' / s[0] / 'checkpoints' / s[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -1027,7 +1082,7 @@
    "hash": "ab7f212329a491b497f27876271d03c022f2dd26760015eef69af619991238fd"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('venv': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1042,9 +1097,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
